<resources>
    <string name="application_name">Sao Di</string>
    <string name="app_name_default">Dian Di</string>
    <string name="tgcx_app_name">TaGe</string>
    <string name="title_all">All</string>
    <string name="title_near_bikes">Near Bike</string>
    <string name="title_my_bike">My Bike</string>
    <string name="title_sacn_bike">Scan bike</string>
    <string name="title_charge_station">Parking</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="menu_settings">Settings</string>
    <string name="scan_text">Place a RQ code in the scan box to recognize it</string>
    <string name="scan_text2">The RQ code into the box, you can scan</string>
    <string name="scan_text3">My RQ code</string>
    <string name="romote_service_name">DianDiChuXing</string>
    <string name="romote_blue">DianDi Bluetooth Service</string>
    <string name="permission_location_rationale">Show maps need location permission</string>
    <string name="permission_write_rationale">Download requires SD card permissions</string>
    <string name="permission_write_rationale_not">Did not open the SD card permissions, can not download the new version</string>
    <string name="ok">confirm</string>
    <string name="permissions_not_granted">Location permission is not open!</string>
    <string name="permission_camera_rationale">The scan needs to turn on the camera permission</string>
    <string name="permision_available_camera">No camera permission</string>
    <string name="permission_get_accounts_hint">No permission,please open the PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">No permission,please open the PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">No permission,please open the PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">No permission,please open the PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">No permission,please open the PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">No permission,please open the PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">No permission,please open the PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">No permission,please open the PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">No permission,please open the PERMISSION_RECORD_AUDIO</string>
    <string name="scan_failed">Scan failed</string>
    <string name="action_change_bike">transfer</string>
    <string name="chong_zhi_tip">Sesame certified users or student users for the first time recharge at least 30 yuan, deposit users for the first time at least 20 yuan recharge, other circumstances recharge at least 10 yuan.
</string>
    <string name="price_unit">&#160;yuan</string>
    <string name="refund_request">Request refund</string>
    <string name="refunding">Refunding</string>
    <string name="login_out">Login out</string>
    <string name="user_name_default">Small drops</string>
    <string name="login_in">Log in</string>
    <string name="toast_no_charge_station">No parking point around!</string>
    <string name="share_title">DianDiChuXing</string>
    <string name="share_text">Too much scenery, too little time? Electric bike with you to enjoy more scenery! Rent electric bike, look for electric bike trip!http://www.qdigo.com</string>
    <string name="update_title">New version tips</string>
    <string name="update_text">Found a new version, the old version may have some features not available, in order to optimize your experience, please download now!</string>
    <string name="toast_update_fail">Download failed, please download again</string>
    <string name="toast_update_last_version">Is the latest version!</string>
    <string name="toast_near_no_bike">No electric bike around!</string>
    <string name="toast_battery_30">Power is not much, pay attention to driving distance!</string>
    <string name="toast_battery_20">Power is not much, pay attention to driving distance!</string>
    <string name="toast_battery_10">Power is too low, please charge immediately!</string>
    <string name="stattion_status_normal">normal</string>
    <string name="station_status_no_normal">abnormal</string>
    <string name="station_status_repairing">maintaining</string>
    <string name="station_flag">Parking point：</string>
    <string name="station_address_flag">Address：</string>
    <string name="station_note_flag">Tips：</string>
    <string name="useful_bike_flag">Available bike：</string>
    <string name="number_unit">""</string>
    <string name="bike_type_a">Simple</string>
    <string name="bike_type_b">Normal</string>
    <string name="bike_type_c">Luxury</string>
    <string name="minite_unit">minute</string>
    <string name="every_time">per</string>
    <string name="mi_unit">&#160;Meter</string>
    <string name="text_detail_rute">View routes</string>
    <string name="login_and_use">Complete the certification can use the car</string>
    <string name="toast_login_useless">Login expired, please log back after landing!</string>
    <string name="toast_no_access">No vehicle control, please take the car first!</string>
    <string name="toast_connect_fail">Connection failed, please try again!</string>
    <string name="search_address_fail">No search, please search for other locations!</string>
    <string name="gps_title">Warning</string>
    <string name="gps_text">For more accurate find the bike, please open the GPS!</string>
    <string name="toast_download_permission">Please open the download permission</string>
    <string name="auth_id">Authentication</string>
    <string name="zhi_ma_auth">Sesame certification</string>
    <string name="toast_real_name_error">Name is null</string>
    <string name="toast_id_error">ID card format is wrong!</string>
    <string name="title_bind_mobile">Bind the phone number</string>
    <string name="mobile_is_null">Phone number can not be empty!</string>
    <string name="toast_no_imei">Please scan or enter the bike number!</string>
    <string name="title_car_control">Bike control</string>
    <string name="dialog_p_tip">Please manually open the P switch on the vehicle</string>
    <string name="toast_unlock_fail">Unlock failed and try again</string>
    <string name="toast_lock_fail">Lock failed and try again</string>
    <string name="toast_start_fail">Start failed and try again</string>
    <string name="toast_stop_fail">Stop failed and try again</string>
    <string name="toast_hc_1">return car fail(</string>
    <string name="toast_hc_2">)，try again</string>
    <string name="toast_hc_fail">return car fail，try again</string>
    <string name="toast_check_fail">detect fail，try again</string>
    <string name="toast_bike_state_fail">Get vehicle status failed</string>
    <string name="ble_connect_success">connection succeeded</string>
    <string name="ble_connect_fail">connection failed,try again</string>
    <string name="device_no_support_ble">Does not support BLE Bluetooth</string>
    <string name="ble_connecting">Connectiong...</string>
    <string name="toast_off_lanya">Open bluetooth fail,try again!</string>
    <string name="toast_on_lanya">Bluetooth is open and can be used quickly!</string>
    <string name="toast_no_remote">You can not use the remote control function while traveling!</string>
    <string name="left_second">s later </string>
    <string name="title_chong_zhi">recharge Centre</string>
    <string name="first_chong_30">The minimum amount of 30 yuan</string>
    <string name="first_chong_20">The minimum amount of 20 yuan</string>
    <string name="no_first_chong">The minimum amount of 10 yuan</string>
    <string name="toast_need_login">Log in first!</string>
    <string name="toast_first_chong_zhima">Sesame certified users for the first time recharge at least 30 yuan</string>
    <string name="toast_first_yajin">deposit users for the first time at least 20 yuan recharge</string>
    <string name="toast_chong_tip">recharge at least 10 yuan</string>
    <string name="titile_chong_zhi_xie_yi">Recharge agreement</string>
    <string name="title_account_detail">Billing details</string>
    <string name="title_credit_history">Credit history</string>
    <string name="text_credit">Credit score +</string>
    <string name="title_my_credit">My credit</string>
    <string name="text_cal_date">Evaluate time：</string>
    <string name="text_look_credit_history">View credit history</string>
    <string name="text_login_and_look_credit">Log in,view credit history</string>
    <string name="toast_fu_mian_tip">No bad record, please keep!</string>
    <string name="title_credit_num">Electricity drop credit score</string>
    <string name="title_you_hui_quan">Redeem coupons</string>
    <string name="text_num_error">Redemption code can not be empty</string>
    <string name="title_error_upload">Fault reporting</string>
    <string name="toast_need_imei">Please enter the vehicle number</string>
    <string name="toast_10_length">Please enter the 10-digit vehicle number</string>
    <string name="toast_error_type">Please select the type of fault</string>
    <string name="toast_find_no_picture">Can not find picture</string>
    <string name="title_reback">Feedback</string>
    <string name="toast_reback_is_null">Comments can not be empty!</string>
    <string name="toast_reback_success">Feedback success!</string>
    <string name="title_input_bike_num">Enter the vehicle number</string>
    <string name="battery_flag">Power:</string>
    <string name="battery_flag_2">%，not long-distance car, to use the bike?</string>
    <string name="battery_flag_10">%，charge immediately</string>
    <string name="dialog_title_battery">Power warning!</string>
    <string name="cancel">cancel</string>
    <string name="toast_zhifu_renzheng">Please pay a deposit to use a bike.</string>
    <string name="text_login">Log in</string>
    <string name="toast_pin_is_null">verification code is empty!</string>
    <string name="confirm_xieyi">Read and agree to the service agreement!</string>
    <string name="text_get_pin">Pin Code</string>
    <string name="title_user_rule">User Terms</string>
    <string name="title_user_guide">User Guide</string>
    <string name="help_normal">Frequently Asked Questions Help</string>
    <string name="title_ablout_us">About us</string>
    <string name="title_credit_rule">Credit score</string>
    <string name="title_hc_rule">Parking method</string>
    <string name="title_price_rule">Billing instructions</string>
    <string name="title_use_rule">Instructions for use</string>
    <string name="title_my_message">My message</string>
    <string name="title_message_detail">Message details</string>
    <string name="history_ride">Historical itinerary</string>
    <string name="minite_uni">Minute</string>
    <string name="ride_flag">Riding time：</string>
    <string name="ride_date">Riding date：</string>
    <string name="ride_bao_dan">Policy number:</string>
    <string name="title_order_detail">order details</string>
    <string name="title_pay_yajin">Pay the deposit</string>
    <string name="text_zhi_ma_auth_success">Sesame certification success!</string>
    <string name="text_zhi_ma_auth_fail">Sesame certification failed!</string>
    <string name="tv_pay_way">payment method</string>
    <string name="pay_zhi_fu_bao">Alipay</string>
    <string name="pay_wei_xin">WeChat</string>
    <string name="btn_pay">pay immediately</string>
    <string name="et_phone_num">Phone number</string>
    <string name="et_pin_code">Pin code</string>
    <string name="tv_speed_money">balance：</string>
    <string name="pay_yajin_tip">Some areas do not support payment of the deposit!</string>
</resources>