<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/titlelayout"
        layout="@layout/title_bar_layout" />
    <ScrollView
        android:layout_below="@id/titlelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/comm_margin"
            android:paddingRight="@dimen/comm_margin" >

            <TextView
                android:id="@+id/payHintTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_speed_money"
                android:textColor="#868686"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/showMoenyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0.01元"
                android:textColor="#ff9900"
                android:textSize="30sp" />
        </LinearLayout>

        <!--<LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#cccccc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#e6e6e6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                android:paddingLeft="@dimen/comm_margin"
                android:paddingRight="@dimen/comm_margin" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_start_time"
                    android:textColor="#868686"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/startTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2016-11-19 15:48:40"
                    android:textColor="#868686"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/comm_margin"
                android:paddingRight="@dimen/comm_margin" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_stop_time"
                    android:textColor="#868686"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/stopTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2016-11-19 15:48:40"
                    android:textColor="#868686"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/comm_margin"
                android:paddingRight="@dimen/comm_margin" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_ride_time"
                    android:textColor="#868686"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sumTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40"
                    android:textColor="#868686"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#e6e6e6"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/comm_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/tv_pay_way"
                android:textColor="#868686"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#cccccc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/comm_margin"
                android:paddingRight="@dimen/comm_margin" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_alipay" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:text="@string/pay_zhi_fu_bao"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/alipayCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_pay_bg"
                    android:checked="true" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/comm_margin"
                android:paddingRight="@dimen/comm_margin" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_weixin" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:text="@string/pay_wei_xin"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/weiXinCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_pay_bg" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#cccccc" />
            
            <!--&lt;!&ndash; 芝麻分认证 &ndash;&gt;
            <LinearLayout 
                android:id="@+id/zhima_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/comm_margin"
	            android:layout_marginRight="@dimen/comm_margin"
	            android:orientation="vertical"
                >
            <TextView 
                android:id="@+id/tv_zhima"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:text="@string/tip_use_method"
	            android:textColor="@color/blue"
	            android:textSize="12sp"
	            android:textStyle="bold"/>
            
	        <Button 
	            android:id="@+id/btnZhima"
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:background="@drawable/button_blue"
	            android:layout_marginTop="10dp"
	            android:text="@string/btn_credit_auth"
	            android:textColor="#fff"
	            android:textSize="16sp"/>
	        </LinearLayout>

            &lt;!&ndash;学生认证&ndash;&gt;
            <LinearLayout
                android:id="@+id/student_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/comm_margin"
                android:layout_marginRight="@dimen/comm_margin"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/student_auth_tip"
                    android:textColor="@color/gui_hua_line"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btnStudent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_green"
                    android:layout_marginTop="10dp"
                    android:text="@string/student_auth_title"
                    android:textColor="#fff"
                    android:textSize="18sp"/>
            </LinearLayout>-->
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tv_payTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_yajin_tip"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textColor="@color/bg"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"/>
            <Button
                android:id="@+id/payBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/comm_margin"
                android:layout_marginRight="@dimen/comm_margin"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_ff9900_bg"
                android:text="@string/btn_pay"
                android:textColor="#fff"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="点击即充值，即表示您已经同意"
                    android:textColor="#868686"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《充值协议》"
                    android:textColor="#115bf2"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>


</RelativeLayout>
